sid/languages/matlab/MATLABParser.py
# Generated from MATLABParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MATLABParser ( Parser ):

    grammarFileName = "MATLABParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'classdef'", "'properties'", 
                     "'methods'", "'end'", "'if'", "'elseif'", "'else'", 
                     "'while'", "'for'", "'switch'", "'case'", "'otherwise'", 
                     "'break'", "'continue'", "'return'", "'='", "'=='", 
                     "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'.'", 
                     "'&'", "'|'", "'&&'", "'||'", "'('", "')'", "'{'", 
                     "'['", "'*'", "'.*'", "'/'", "'\\'", "'./'", "'.\\'", 
                     "'.^'", "'^'", "'~'", "':'", "'.''", "'''", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "']'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "FUNCTION", "CLASSDEF", "PROPERTIES", 
                      "METHODS", "END", "IF", "ELSEIF", "ELSE", "WHILE", 
                      "FOR", "SWITCH", "CASE", "OTHERWISE", "BREAK", "CONTINUE", 
                      "RETURN", "EQUALS", "EQUALTO", "GT", "LT", "GE", "LE", 
                      "PLUS", "MINUS", "DOT", "VECAND", "VECOR", "SCALAND", 
                      "SCALOR", "LPAREN", "RPAREN", "LBRACE", "LBRACK", 
                      "MTIMES", "TIMES", "RDIVIDE", "LDIVIDE", "MRDIVIDE", 
                      "MLDIVIDE", "POW", "MPOW", "NOT", "COLON", "TRANS", 
                      "CTRANS", "NL", "COMMENT", "INT", "FLOAT", "SCI", 
                      "ID", "STRING", "RBRACK", "RBRACE", "COMMA", "SEMI", 
                      "WS" ]

    RULE_fileDecl = 0
    RULE_endStat = 1
    RULE_endStatNL = 2
    RULE_partialFunctionDecl = 3
    RULE_functionDecl = 4
    RULE_methodDecl = 5
    RULE_classDecl = 6
    RULE_propBlockDecl = 7
    RULE_methodBlockDecl = 8
    RULE_outArgs = 9
    RULE_inArgs = 10
    RULE_prop = 11
    RULE_dotRef = 12
    RULE_statBlock = 13
    RULE_ifStat = 14
    RULE_whileStat = 15
    RULE_forStat = 16
    RULE_switchStat = 17
    RULE_caseStat = 18
    RULE_otherwiseStat = 19
    RULE_jumpStat = 20
    RULE_stat = 21
    RULE_expr = 22
    RULE_exprList = 23
    RULE_listExpr = 24
    RULE_arrayExpr = 25
    RULE_cellExpr = 26
    RULE_logicExpr = 27
    RULE_compExpr = 28
    RULE_colonExpr = 29
    RULE_additiveExpr = 30
    RULE_multiplicativeExpr = 31
    RULE_signExpr = 32
    RULE_powExpr = 33
    RULE_transposeExpr = 34
    RULE_basicExpr = 35
    RULE_exprArrayList = 36

    ruleNames =  [ "fileDecl", "endStat", "endStatNL", "partialFunctionDecl", 
                   "functionDecl", "methodDecl", "classDecl", "propBlockDecl", 
                   "methodBlockDecl", "outArgs", "inArgs", "prop", "dotRef", 
                   "statBlock", "ifStat", "whileStat", "forStat", "switchStat", 
                   "caseStat", "otherwiseStat", "jumpStat", "stat", "expr", 
                   "exprList", "listExpr", "arrayExpr", "cellExpr", "logicExpr", 
                   "compExpr", "colonExpr", "additiveExpr", "multiplicativeExpr", 
                   "signExpr", "powExpr", "transposeExpr", "basicExpr", 
                   "exprArrayList" ]

    EOF = Token.EOF
    FUNCTION=1
    CLASSDEF=2
    PROPERTIES=3
    METHODS=4
    END=5
    IF=6
    ELSEIF=7
    ELSE=8
    WHILE=9
    FOR=10
    SWITCH=11
    CASE=12
    OTHERWISE=13
    BREAK=14
    CONTINUE=15
    RETURN=16
    EQUALS=17
    EQUALTO=18
    GT=19
    LT=20
    GE=21
    LE=22
    PLUS=23
    MINUS=24
    DOT=25
    VECAND=26
    VECOR=27
    SCALAND=28
    SCALOR=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    LBRACK=33
    MTIMES=34
    TIMES=35
    RDIVIDE=36
    LDIVIDE=37
    MRDIVIDE=38
    MLDIVIDE=39
    POW=40
    MPOW=41
    NOT=42
    COLON=43
    TRANS=44
    CTRANS=45
    NL=46
    COMMENT=47
    INT=48
    FLOAT=49
    SCI=50
    ID=51
    STRING=52
    RBRACK=53
    RBRACE=54
    COMMA=55
    SEMI=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(MATLABParser.FunctionDeclContext,i)


        def classDecl(self):
            return self.getTypedRuleContext(MATLABParser.ClassDeclContext,0)


        def partialFunctionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.PartialFunctionDeclContext)
            else:
                return self.getTypedRuleContext(MATLABParser.PartialFunctionDeclContext,i)


        def statBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.StatBlockContext)
            else:
                return self.getTypedRuleContext(MATLABParser.StatBlockContext,i)


        def EOF(self):
            return self.getToken(MATLABParser.EOF, 0)

        def getRuleIndex(self):
            return MATLABParser.RULE_fileDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileDecl" ):
                listener.enterFileDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileDecl" ):
                listener.exitFileDecl(self)




    def fileDecl(self):

        localctx = MATLABParser.FileDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fileDecl)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.functionDecl()

                elif la_ == 2:
                    self.state = 75
                    self.classDecl()


                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MATLABParser.FUNCTION:
                        self.state = 78
                        self.functionDecl()
                        self.state = 83
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass

                elif la_ == 2:
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==MATLABParser.FUNCTION:
                        self.state = 84
                        self.partialFunctionDecl()
                        self.state = 89
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 92
                    self.partialFunctionDecl()
                    self.state = 95 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==MATLABParser.FUNCTION):
                        break

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 97
                    self.statBlock()
                    self.state = 100 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MATLABParser.IF) | (1 << MATLABParser.WHILE) | (1 << MATLABParser.FOR) | (1 << MATLABParser.SWITCH) | (1 << MATLABParser.BREAK) | (1 << MATLABParser.CONTINUE) | (1 << MATLABParser.RETURN) | (1 << MATLABParser.PLUS) | (1 << MATLABParser.MINUS) | (1 << MATLABParser.LPAREN) | (1 << MATLABParser.LBRACE) | (1 << MATLABParser.LBRACK) | (1 << MATLABParser.NOT) | (1 << MATLABParser.NL) | (1 << MATLABParser.INT) | (1 << MATLABParser.FLOAT) | (1 << MATLABParser.SCI) | (1 << MATLABParser.ID) | (1 << MATLABParser.STRING))) != 0)):
                        break

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.match(MATLABParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndStatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.NL)
            else:
                return self.getToken(MATLABParser.NL, i)

        def COMMA(self):
            return self.getToken(MATLABParser.COMMA, 0)

        def SEMI(self):
            return self.getToken(MATLABParser.SEMI, 0)

        def getRuleIndex(self):
            return MATLABParser.RULE_endStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndStat" ):
                listener.enterEndStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndStat" ):
                listener.exitEndStat(self)




    def endStat(self):

        localctx = MATLABParser.EndStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_endStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MATLABParser.NL) | (1 << MATLABParser.COMMA) | (1 << MATLABParser.SEMI))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 106
                    self.match(MATLABParser.NL) 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndStatNLContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.NL)
            else:
                return self.getToken(MATLABParser.NL, i)

        def getRuleIndex(self):
            return MATLABParser.RULE_endStatNL

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndStatNL" ):
                listener.enterEndStatNL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndStatNL" ):
                listener.exitEndStatNL(self)




    def endStatNL(self):

        localctx = MATLABParser.EndStatNLContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_endStatNL)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 112
                    self.match(MATLABParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 115 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartialFunctionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MATLABParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MATLABParser.ID, 0)

        def endStat(self):
            return self.getTypedRuleContext(MATLABParser.EndStatContext,0)


        def outArgs(self):
            return self.getTypedRuleContext(MATLABParser.OutArgsContext,0)


        def inArgs(self):
            return self.getTypedRuleContext(MATLABParser.InArgsContext,0)


        def statBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.StatBlockContext)
            else:
                return self.getTypedRuleContext(MATLABParser.StatBlockContext,i)


        def getRuleIndex(self):
            return MATLABParser.RULE_partialFunctionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPartialFunctionDecl" ):
                listener.enterPartialFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPartialFunctionDecl" ):
                listener.exitPartialFunctionDecl(self)




    def partialFunctionDecl(self):

        localctx = MATLABParser.PartialFunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_partialFunctionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MATLABParser.FUNCTION)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 118
                self.outArgs()


            self.state = 121
            self.match(MATLABParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MATLABParser.LPAREN:
                self.state = 122
                self.inArgs()


            self.state = 125
            self.endStat()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MATLABParser.IF) | (1 << MATLABParser.WHILE) | (1 << MATLABParser.FOR) | (1 << MATLABParser.SWITCH) | (1 << MATLABParser.BREAK) | (1 << MATLABParser.CONTINUE) | (1 << MATLABParser.RETURN) | (1 << MATLABParser.PLUS) | (1 << MATLABParser.MINUS) | (1 << MATLABParser.LPAREN) | (1 << MATLABParser.LBRACE) | (1 << MATLABParser.LBRACK) | (1 << MATLABParser.NOT) | (1 << MATLABParser.NL) | (1 << MATLABParser.INT) | (1 << MATLABParser.FLOAT) | (1 << MATLABParser.SCI) | (1 << MATLABParser.ID) | (1 << MATLABParser.STRING))) != 0):
                self.state = 126
                self.statBlock()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def partialFunctionDecl(self):
            return self.getTypedRuleContext(MATLABParser.PartialFunctionDeclContext,0)


        def END(self):
            return self.getToken(MATLABParser.END, 0)

        def endStatNL(self):
            return self.getTypedRuleContext(MATLABParser.EndStatNLContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.NL)
            else:
                return self.getToken(MATLABParser.NL, i)

        def getRuleIndex(self):
            return MATLABParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = MATLABParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.partialFunctionDecl()
            self.state = 133
            self.match(MATLABParser.END)
            self.state = 134
            self.endStatNL()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MATLABParser.NL:
                self.state = 135
                self.match(MATLABParser.NL)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def partialFunctionDecl(self):
            return self.getTypedRuleContext(MATLABParser.PartialFunctionDeclContext,0)


        def END(self):
            return self.getToken(MATLABParser.END, 0)

        def endStat(self):
            return self.getTypedRuleContext(MATLABParser.EndStatContext,0)


        def getRuleIndex(self):
            return MATLABParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)




    def methodDecl(self):

        localctx = MATLABParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.partialFunctionDecl()
            self.state = 142
            self.match(MATLABParser.END)
            self.state = 143
            self.endStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASSDEF(self):
            return self.getToken(MATLABParser.CLASSDEF, 0)

        def ID(self):
            return self.getToken(MATLABParser.ID, 0)

        def endStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.EndStatContext)
            else:
                return self.getTypedRuleContext(MATLABParser.EndStatContext,i)


        def END(self):
            return self.getToken(MATLABParser.END, 0)

        def EOF(self):
            return self.getToken(MATLABParser.EOF, 0)

        def propBlockDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.PropBlockDeclContext)
            else:
                return self.getTypedRuleContext(MATLABParser.PropBlockDeclContext,i)


        def methodBlockDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.MethodBlockDeclContext)
            else:
                return self.getTypedRuleContext(MATLABParser.MethodBlockDeclContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.NL)
            else:
                return self.getToken(MATLABParser.NL, i)

        def getRuleIndex(self):
            return MATLABParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)




    def classDecl(self):

        localctx = MATLABParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MATLABParser.CLASSDEF)
            self.state = 146
            self.match(MATLABParser.ID)
            self.state = 147
            self.endStat()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MATLABParser.PROPERTIES or _la==MATLABParser.METHODS:
                self.state = 150
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MATLABParser.PROPERTIES]:
                    self.state = 148
                    self.propBlockDecl()
                    pass
                elif token in [MATLABParser.METHODS]:
                    self.state = 149
                    self.methodBlockDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(MATLABParser.END)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MATLABParser.EOF]:
                self.state = 156
                self.match(MATLABParser.EOF)
                pass
            elif token in [MATLABParser.NL, MATLABParser.COMMA, MATLABParser.SEMI]:
                self.state = 157
                self.endStat()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MATLABParser.NL:
                self.state = 160
                self.match(MATLABParser.NL)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropBlockDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROPERTIES(self):
            return self.getToken(MATLABParser.PROPERTIES, 0)

        def endStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.EndStatContext)
            else:
                return self.getTypedRuleContext(MATLABParser.EndStatContext,i)


        def END(self):
            return self.getToken(MATLABParser.END, 0)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.PropContext)
            else:
                return self.getTypedRuleContext(MATLABParser.PropContext,i)


        def getRuleIndex(self):
            return MATLABParser.RULE_propBlockDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropBlockDecl" ):
                listener.enterPropBlockDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropBlockDecl" ):
                listener.exitPropBlockDecl(self)




    def propBlockDecl(self):

        localctx = MATLABParser.PropBlockDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_propBlockDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MATLABParser.PROPERTIES)
            self.state = 167
            self.endStat()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MATLABParser.ID:
                self.state = 168
                self.prop()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(MATLABParser.END)
            self.state = 175
            self.endStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBlockDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHODS(self):
            return self.getToken(MATLABParser.METHODS, 0)

        def endStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.EndStatContext)
            else:
                return self.getTypedRuleContext(MATLABParser.EndStatContext,i)


        def END(self):
            return self.getToken(MATLABParser.END, 0)

        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MATLABParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(MATLABParser.MethodDeclContext,i)


        def getRuleIndex(self):
            return MATLABParser.RULE_methodBlockDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBlockDecl" ):
                listener.enterMethodBlockDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBlockDecl" ):
                listener.exitMethodBlockDecl(self)




    def methodBlockDecl(self):

        localctx = MATLABParser.MethodBlockDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodBlockDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(MATLABParser.METHODS)
            self.state = 178
            self.endStat()
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MATLABParser.FUNCTION:
                self.state = 179
                self.methodDecl()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 185
            self.match(MATLABParser.END)
            self.state = 186
            self.endStat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.ID)
            else:
                return self.getToken(MATLABParser.ID, i)

        def EQUALS(self):
            return self.getToken(MATLABParser.EQUALS, 0)

        def LBRACK(self):
            return self.getToken(MATLABParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MATLABParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MATLABParser.COMMA)
            else:
                return self.getToken(MATLABParser.COMMA, i)

        def getRuleIndex(self):
            return MATLABParser.RULE_outArgs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutArgs" ):
                listener.enterOutArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutArgs" ):
                listener.exitOutArgs(self)




    def outArgs(self):

        localctx = MATLABParser.OutArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_outArgs)
        self._la = 0 # Token type
        try:
            self.state = 201
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MATLABParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.match(MATLABParser.ID)
                self.state = 189
                self.match(MATLABParser.EQUALS)
                pass
            elif token in [MATLABParser.LBRACK]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.match(MATLABParser.LBRACK)
                self.state = 191
                self.match(MATLABParser.ID)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MATLABParser.COMMA:
                    self.state = 192
                    self.match(MATLABParser.COMMA)
                    self.state = 193
                    self.match(MATLABParser.ID)
                    self.state = 198
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 199
                self.match(MATLABParser.RBRACK)
                self.state = 200
                self.match(MATLABParser.EQUALS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InArgsContext(ParserRuleContext):
